[project]
name = "aust_renewal"
version = "0.9.0"
dependencies = [
    "emu_renewal @ git+https://github.com/monash-emu/renewal.git@66299a8",
    "ipykernel",
    "ipywidgets",
    "nbformat"
]

[tool.setuptools]
packages = ["aust_renewal"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"aust_renewal.data" = ["data/**/*.csv", "data/**/*.json"]

[tool.black]
line-length = 100
